finish footer, contact form add

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<!-- Start Home Section -->
 	<div id="home">
 		<!--Navigation-->
-		<nav class="navbar navbar-expand-md fixed-top text-uppercase font-weight-bold">
+		<nav class="navbar navbar-expand-md fixed-top">
 			<a href="#" class="navbar-brand"><img src="img/nest.png" alt=""></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="custom-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -57,9 +57,9 @@
 		<!-- End Landing page image -->
 
 		<!-- Start landingpage content -->
-		<div class="col-12 position-absolute text-center caption">
+		<div class="col-12 caption">
 			<h1 class="text-light text-uppercase pb-3 pb-md-4">Nest Responsive Bootstrap Theme</h1>
-			<a href="#about" class="btn btn-outline-light text-uppercase rounded-0">Get Starter</a>
+			<a href="#about" class="btn btn-outline-light">Get Starter</a>
 		</div>
 		<!-- End landingpage content -->
 	</div>
@@ -70,9 +70,9 @@
 	<div id="about" class="offset">
 	<!-- Start Jumbotron -->
 		<div class="jumbotron text-center pt-5 mb-0">
-			<h2 class="text-uppercase font-weight-bold">About</h2>
+			<h2 class="heading">About</h2>
 
-			<div class="heading-underline mx-auto my-4"></div>
+			<div class="heading-underline"></div>
 			
 			<!-- Start Row -->
 			<div class="row justify-content-center mt-5">
@@ -109,39 +109,39 @@
 
 		<!-- Start container fluid -->
 		<div class="container-fluid text-center py-5 mx-0">
-			<h2 class="text-uppercase font-weight-bold">portfolio</h2>
-			<div class="heading-underline mx-auto my-4"></div>
+			<h2 class="heading">portfolio</h2>
+			<div class="heading-underline"></div>
 
 			<!-- Start Portfolio grid -->
 			<div class="row pt-4">
 				<div class="col-md-6 p-0">
-					<div class="portfolio-item overflow-hidden">
+					<div class="portfolio-item">
 						<a href="img/portfolio/1.jpg" data-lightbox="example-set" data-title="My Portfolio Image Description">
-						<img src="img/portfolio/1.jpg" alt="" class="example-image w-100">
+						<img src="img/portfolio/1.jpg" alt="" class="example-image">
 						</a>
 					</div>
 				</div>
 
 				<div class="col-md-6 p-0">
-					<div class="portfolio-item overflow-hidden">
+					<div class="portfolio-item">
 						<a href="img/portfolio/2.jpg" data-lightbox="example-set" data-title="">
-						<img src="img/portfolio/2.jpg" alt="" class="example-image w-100">
+						<img src="img/portfolio/2.jpg" alt="" class="example-image">
 						</a>
 					</div>
 				</div>
 
 				<div class="col-md-6 p-0">
-					<div class="portfolio-item overflow-hidden">
-						<a href="img/portfolio/3.jpg" data-lightbox="example-set" date-title="My Portfolio Image Description">
-						<img src="img/portfolio/3.jpg" alt="" class="example-image w-100">
+					<div class="portfolio-item">
+						<a href="img/portfolio/3.jpg" data-lightbox="example-set" data-title="My Portfolio Image Description">
+						<img src="img/portfolio/3.jpg" alt="" class="example-image">
 						</a>
 					</div>
 				</div>
 
 				<div class="col-md-6 p-0">
-					<div class="portfolio-item overflow-hidden">
-						<a href="img/portfolio/4.jpg" data-lightbox="example-set" date-title="My Portfolio Image Description">
-						<img src="img/portfolio/4.jpg" alt="" class="example-image w-100">
+					<div class="portfolio-item">
+						<a href="img/portfolio/4.jpg" data-lightbox="example-set" data-title="My Portfolio Image Description">
+						<img src="img/portfolio/4.jpg" alt="" class="example-image">
 						</a>
 					</div>
 				</div>
@@ -164,14 +164,103 @@
 
 	<!-- Start Testimonials Section -->
 	<div id="testimonials" class="offset">
+			<!-- Start Jumbotron-->
+			<div class="jumbotron text-center pb-5 mb-0">
 
+				<h2 class="heading">Testimonials</h2>
+				<div class="heading-underline"></div>
+	
+				<div class="row justify-content-center">
+	
+					<div class="col-11 col-sm-10">
+						<div class="row pt-3">
+	
+							<div class="col-md-6 pb-5">
+								<div class="card rounded-0 mx-sm-2 mx-lg-4 mx-xl-5">
+									<img src="img/testimonials/1.jpg" alt="" class="card-img-top rounded-0">
+									<div class="card-body">
+										<h4>John Lee</h4>
+										<h5 class="mt-2 mb-3">CEO, Company Inc.</h5>
+										<p class="lead border-top pt-3">"I have over 10 years of experience in technology and haven't come accross a better service."</p>
+									</div>
+								</div>
+							</div>
+	
+							<div class="col-md-6">
+								<div class="card rounded-0 mx-sm-2 mx-lg-4 mx-xl-5">
+									<img src="img/testimonials/2.jpg" alt="" class="card-img-top rounded-0">
+									<div class="card-body">
+										<h4>Jessica Miller</h4>
+										<h5 class="mt-2 mb-3">President, Company Inc.</h5>
+										<p class="lead border-top pt-3">"I have over 10 years of experience in technology and haven't come accross a better service."</p>
+									</div>
+								</div>
+							</div>
+	
+						</div> <!-- End Row -->
+					</div> <!-- End Column-->
+	
+				</div> <!-- End Row -->
+	
+			</div>
+			<!-- End Jumbotron -->
 	</div>
 	<!-- End Testimonials Section -->
 
 
 	<!-- Start Contact Section -->
 	<div id="contact" class="offset">
+		<div class="container-fluid footer">
+			<div class="row text-light pt-4 pb-5 px-2 px-md-5">
 
+				<div class="col-md-5">
+					<img src="img/nest.png" alt="" class="my-4">
+					<p>At our core is a collection of design and development solutions that represent everything your business needs to compete in the modern marketplace.</p>
+					<strong>Our Location</strong>
+					<p>Alexanderstr. 111<br>Berlin, 10405</p>
+					<strong>Contact Info</strong>
+					<p>(030) 756-8228<br>mynest@codeacademy.com</p>
+					<ul class="social pt-3">
+						<li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+						<li><a href="#"><i class="fab fa-twitter-square"></i></a></li>
+						<li><a href="#"><i class="fab fa-youtube-square"></i></a></li>
+						<li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+					</ul>
+				</div>
+
+				<div class="col-md-7">
+					<h3 class="text-uppercase my-4">Contact Us</h3>
+
+					<form action="contact/contact.php" method="POST" id="contact-form">
+					
+						<div class="messages"></div>
+
+						<div class="controls">
+
+							<div class="form-group">
+								<input type="text" name="name" id="form_name" class="form-control" required="required" placeholder="Enter your name.">
+							</div>
+
+							<div class="form-group">
+								<input type="email" name="email" id="form_email" class="form-control" required="required" placeholder="Enter your email.">
+							</div>
+
+							<div class="form-group">
+								<textarea name="message" id="form_message" rows="4" class="form-control" required="required" placeholder="Add your message."></textarea>
+							</div>
+
+							<input type="submit" value="Send Message" class="btn btn-outline-light">
+
+						</div> <!-- End Controls -->
+					
+					</form>
+				</div> <!-- End Column -->
+
+				<hr class="socket w-100">
+				&copy; Nest Theme.
+
+			</div> <!-- End Row -->
+		</div> <!-- End Footer Container -->
 	</div>
 	<!-- End Contact Section -->
 
