--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
 	<!-- Font Awesome https://fontawesome.com/  https://use.fontawesome.com/releases/v5.10.1/js/all.js -->
 	<script src="https://kit.fontawesome.com/31eec15736.js" crossorigin="anonymous"></script>
 	<!-- Plugins.js -->
+	<script src="js/plugins.js"></script>
 	<!-- Lightbox Image Gallery https://cdnjs.com/libraries/lightbox2 -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.1/js/lightbox.min.js"></script>
 	<!-- Bootstrap Form Validator https://cdnjs.com/libraries/1000hz-bootstrap-validator -->
