fix bug on navbar-toggler

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="custom-toggler-icon"><i class="fas fa-bars"></i></span>
 			</button>
-			<div class="collapse navbar-collapse" id="#navbarResponsive">
+			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
 						<a href="#home" class="nav-link">Home</a>
@@ -266,7 +266,7 @@
 
 
 	<!-- Script Source Files -->
-
+	
 	<!-- jQuery https://code.jquery.com/ NOTE: jQuery 3.5.0 is not Compatible with Bootstrap yet, please use 3.4.1 as seen below -->
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
